--- a/src/main/resources/jupyter/cluster-docker-compose.yaml
+++ b/src/main/resources/jupyter/cluster-docker-compose.yaml
@@ -15,7 +15,7 @@ proxy:
 
 jupyter:
   container_name: "${JUPYTER_SERVER_NAME}"
-  image: "${JUPYTER_DOCKER_IMAGE}"
+  image: broadinstitute/leonardo-notebooks:he_sparkthings
   net: host
   volumes:
     - /work:/home/user/work
