--- a/src/test/resources/reference.conf
+++ b/src/test/resources/reference.conf
@@ -68,6 +68,7 @@ clusterResources {
   proxySiteConf = "test-site.conf"
   jupyterCustomJs = "test-custom.js"
   jupyterGoogleSignInJs = "test-google_sign_in.js"
+  jupyterServerExtension = "test-jupyter-server-extension.py"
 }
 
 clusterDefaults {
