--- a/src/main/resources/jupyter/cluster-docker-compose.yaml
+++ b/src/main/resources/jupyter/cluster-docker-compose.yaml
@@ -32,3 +32,4 @@ jupyter:
     GOOGLE_PROJECT: "${GOOGLE_PROJECT}"
     CLUSTER_NAME: "${CLUSTER_NAME}"
     GOOGLE_APPLICATION_CREDENTIALS: "/etc/${JUPYTER_SERVICE_ACCOUNT_CREDENTIALS}"
+    PYTHONPATH: /home/jupyter-user/.jupyter/custom
