--- a/jupyter-docker/Dockerfile
+++ b/jupyter-docker/Dockerfile
@@ -31,7 +31,7 @@ ENV HAIL_HOME /hail
 ENV HADOOP_CONF_DIR /etc/hadoop/conf
 
 ENV PATH $SPARK_HOME:$SPARK_HOME/python:$SPARK_HOME/bin:$HAIL_HOME:$PATH
-ENV PYTHONPATH $PYTHONPATH:$HAIL_HOME/$HAILPYTHON:$HAIL_HOME/python:$SPARK_HOME/python:$SPARK_HOME/python/lib/py4j-0.10.3-src.zip:/home/jupyter-user/.jupytyer/custom
+ENV PYTHONPATH $PYTHONPATH:$HAIL_HOME/$HAILPYTHON:$HAIL_HOME/python:$SPARK_HOME/python:$SPARK_HOME/python/lib/py4j-0.10.3-src.zip
 
 ENV USER jupyter-user
 ENV UID 1000
