--- a/src/test/resources/reference.conf
+++ b/src/test/resources/reference.conf
@@ -122,6 +122,15 @@ auth {
     SyncDataToCluster = false
     DeleteCluster = false
   }
+
+  syncOnlyProviderConfig = {
+    ListClusters = true
+    CreateClusters = false
+    GetClusterStatus = true
+    ConnectToCluster = false
+    SyncDataToCluster =true
+    DeleteCluster = false
+  }
 }
 
 serviceAccounts {
