--- a/src/main/resources/jupyter/cluster-docker-compose.yaml
+++ b/src/main/resources/jupyter/cluster-docker-compose.yaml
@@ -26,10 +26,9 @@ jupyter:
     - /etc/${JUPYTER_SERVICE_ACCOUNT_CREDENTIALS}:/etc/${JUPYTER_SERVICE_ACCOUNT_CREDENTIALS}
     - /etc/custom.js:/home/jupyter-user/.jupyter/custom/custom.js
     - /etc/google_sign_in.js:/home/jupyter-user/.jupyter/custom/google_sign_in.js
-    - /etc/Jupyter_Server_Extension.py:/home/jupyter-user/.jupyter/custom/Jupyter_Server_Extension.py
+    - /etc/jupyter_localize_extension.py.py:/home/jupyter-user/.jupyter/custom/jupyter_localize_extension.py.py
   restart: always
   environment:
     GOOGLE_PROJECT: "${GOOGLE_PROJECT}"
     CLUSTER_NAME: "${CLUSTER_NAME}"
     GOOGLE_APPLICATION_CREDENTIALS: "/etc/${JUPYTER_SERVICE_ACCOUNT_CREDENTIALS}"
-    PYTHONPATH: /etc/jupyter/custom
